@@ -1577,9 +1577,9 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     Defaults to <code>30</code>. To disable the filter completely some high number
     can be used (e.g. 9999)</dd>
 
-    <dt id="cfg_LeftDisplayServers">$cfg['LeftDisplayServers'] boolean</dt>
-    <dd>Defines whether or not to display a server choice at the top of the left frame.
-        Defaults to FALSE.</dd>
+    <dt id="cfg_NavigationDisplayServers">$cfg['NavigationDisplayServers'] boolean</dt>
+    <dd>Defines whether or not to display a server choice at the top of the
+        navigation panel. Defaults to FALSE.</dd>
     <dt id="cfg_DisplayServersList">$cfg['DisplayServersList'] boolean</dt>
     <dd>Defines whether to display this server choice as links instead of in a drop-down.
         Defaults to FALSE (drop-down).</dd>
