@@ -108,7 +108,7 @@ if ($server > 0) {
 echo '<div id="maincontainer">' . "\n";
 echo '<div id="main_pane_left">';
 if ($server > 0
-    || (! $cfg['LeftDisplayServers'] && count($cfg['Servers']) > 1)
+    || (! $cfg['NavigationDisplayServers'] && count($cfg['Servers']) > 1)
 ) {
     echo '<div class="group">';
     echo '<h2>' . __('General Settings') . '</h2>';
@@ -117,7 +117,7 @@ if ($server > 0
     /**
      * Displays the MySQL servers choice form
      */
-    if (! $cfg['LeftDisplayServers']
+    if (! $cfg['NavigationDisplayServers']
         && (count($cfg['Servers']) > 1 || $server == 0 && count($cfg['Servers']) == 1)
     ) {
         echo '<li id="li_select_server">';
