@@ -268,8 +268,6 @@ $strConfigImport_xlsx_col_names_name = __('Column names in first row');
 $strConfigInitialSlidersState_name = __('Initial state for sliders');
 $strConfigInsertRows_desc = __('How many rows can be inserted at one time');
 $strConfigInsertRows_name = __('Number of inserted rows');
-$strConfigLeftDisplayServers_desc = __('Display server choice at the top of the left frame');
-$strConfigLeftDisplayServers_name = __('Display servers selection');
 $strConfigLeftDisplayDatabaseFilterMinimum_name = __('Minimum number of databases to display the database filter box');
 $strConfigLeftRecentTable_desc = __('Maximum number of recently used tables; set 0 to disable');
 $strConfigLeftRecentTable_name = __('Recently used tables');
@@ -307,6 +305,8 @@ $strConfigNavigationLogoLink_desc = __('URL where logo in the navigation frame w
 $strConfigNavigationLogoLink_name = __('Logo link URL');
 $strConfigNavigationLogoLinkWindow_desc = __('Open the linked page in the main window ([kbd]main[/kbd]) or in a new one ([kbd]new[/kbd])');
 $strConfigNavigationLogoLinkWindow_name = __('Logo link target');
+$strConfigNavigationDisplayServers_desc = __('Display server choice at the top of the left frame');
+$strConfigNavigationDisplayServers_name = __('Display servers selection');
 $strConfigNavigationTreeDefaultTabTable_name = __('Target for quick access icon');
 $strConfigNavigationTreeDisplayItemFilterMinimum_desc = __('Defines the minimum number of items (tables, views, routines and events) to display a filter box.');
 $strConfigNavigationTreeDisplayItemFilterMinimum_name = __('Minimum number of items to display the filter box');
